--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-        <title>滑动日历(基于轮播)-calendar</title>
+        <title>滑动日历(基于轮播) - calendar</title>
         <link rel="shortcut icon" href="../static/image/favicon.png">
         <link rel="stylesheet" type="text/css" href="../static/style/common.css">
         <style type="text/css">
@@ -102,7 +102,7 @@
                 <div class="inner">
                     <section class="mod-panel">
                         <div class="hd">
-                            <h3 class="title">日历-calendar</h3>
+                            <h3 class="title">滑动日历(基于轮播) - calendar</h3>
                         </div>
                         <div class="bd">
                             <div class="calendar-container calendar-container-1"></div>
