--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -70,7 +70,7 @@
                 <div class="inner">
                     <section class="mod-panel">
                         <div class="hd">
-                            <h3 class="title">标签页-tabs</h3>
+                            <h3 class="title">城市三级联动 - citys</h3>
                         </div>
                         <div class="bd">
                             <div class="box">
