--- a/jquery-scrollbar/index.html
+++ b/jquery-scrollbar/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-        <title>滚动条-scrollbar</title>
+        <title>滚动条 - scrollbar</title>
         <link rel="shortcut icon" href="../static/image/favicon.png">
         <link rel="stylesheet" type="text/css" href="../static/style/common.css">
         <style type="text/css">
@@ -100,7 +100,7 @@
                 <div class="inner">
                     <section class="mod-panel">
                         <div class="hd">
-                            <h3 class="title">标签页-tabs</h3>
+                            <h3 class="title">滚动条 - scrollbar</h3>
                         </div>
                         <div class="bd">
                             <div class="scrollbar-container scrollbar-container-1">
